examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__concatenated_strings.snap
---
source: src/tests/corpus/literals.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 21,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 20,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 19,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                ConcatenatedString(
                    ConcatenatedString {
                        children: [
                            AstNodeId {
                                id: 3,
                                _marker: PhantomData<ast_python::generated::String>,
                            },
                            AstNodeId {
                                id: 7,
                                _marker: PhantomData<ast_python::generated::String>,
                            },
                            AstNodeId {
                                id: 11,
                                _marker: PhantomData<ast_python::generated::String>,
                            },
                        ],
                        _range: Range {
                            start_byte: 1,
                            end_byte: 20,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 19,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                    },
                ),
            ),
        ),
        String {
            children: [
                AstNodeId {
                    id: 4,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
                AstNodeId {
                    id: 5,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
                AstNodeId {
                    id: 6,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 6,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 1,
                    column: 5,
                },
            },
            _id: 3,
            _parent: Some(
                2,
            ),
        },
        StringStart(
            StringStart {
                _range: Range {
                    start_byte: 1,
                    end_byte: 2,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 1,
                    },
                },
                _id: 4,
                _parent: Some(
                    3,
                ),
            },
        ),
        StringContent(
            StringContent {
                children: [],
                _range: Range {
                    start_byte: 2,
                    end_byte: 5,
                    start_point: Point {
                        row: 1,
                        column: 1,
                    },
                    end_point: Point {
                        row: 1,
                        column: 4,
                    },
                },
                _id: 5,
                _parent: Some(
                    3,
                ),
            },
        ),
        StringEnd(
            StringEnd {
                _range: Range {
                    start_byte: 5,
                    end_byte: 6,
                    start_point: Point {
                        row: 1,
                        column: 4,
                    },
                    end_point: Point {
                        row: 1,
                        column: 5,
                    },
                },
                _id: 6,
                _parent: Some(
                    3,
                ),
            },
        ),
        String {
            children: [
                AstNodeId {
                    id: 8,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
                AstNodeId {
                    id: 9,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
                AstNodeId {
                    id: 10,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
            ],
            _range: Range {
                start_byte: 7,
                end_byte: 12,
                start_point: Point {
                    row: 1,
                    column: 6,
                },
                end_point: Point {
                    row: 1,
                    column: 11,
                },
            },
            _id: 7,
            _parent: Some(
                2,
            ),
        },
        StringStart(
            StringStart {
                _range: Range {
                    start_byte: 7,
                    end_byte: 8,
                    start_point: Point {
                        row: 1,
                        column: 6,
                    },
                    end_point: Point {
                        row: 1,
                        column: 7,
                    },
                },
                _id: 8,
                _parent: Some(
                    7,
                ),
            },
        ),
        StringContent(
            StringContent {
                children: [],
                _range: Range {
                    start_byte: 8,
                    end_byte: 11,
                    start_point: Point {
                        row: 1,
                        column: 7,
                    },
                    end_point: Point {
                        row: 1,
                        column: 10,
                    },
                },
                _id: 9,
                _parent: Some(
                    7,
                ),
            },
        ),
        StringEnd(
            StringEnd {
                _range: Range {
                    start_byte: 11,
                    end_byte: 12,
                    start_point: Point {
                        row: 1,
                        column: 10,
                    },
                    end_point: Point {
                        row: 1,
                        column: 11,
                    },
                },
                _id: 10,
                _parent: Some(
                    7,
                ),
            },
        ),
        String {
            children: [
                AstNodeId {
                    id: 12,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
                AstNodeId {
                    id: 13,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
                AstNodeId {
                    id: 14,
                    _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                },
            ],
            _range: Range {
                start_byte: 13,
                end_byte: 20,
                start_point: Point {
                    row: 1,
                    column: 12,
                },
                end_point: Point {
                    row: 1,
                    column: 19,
                },
            },
            _id: 11,
            _parent: Some(
                2,
            ),
        },
        StringStart(
            StringStart {
                _range: Range {
                    start_byte: 13,
                    end_byte: 14,
                    start_point: Point {
                        row: 1,
                        column: 12,
                    },
                    end_point: Point {
                        row: 1,
                        column: 13,
                    },
                },
                _id: 12,
                _parent: Some(
                    11,
                ),
            },
        ),
        StringContent(
            StringContent {
                children: [],
                _range: Range {
                    start_byte: 14,
                    end_byte: 19,
                    start_point: Point {
                        row: 1,
                        column: 13,
                    },
                    end_point: Point {
                        row: 1,
                        column: 18,
                    },
                },
                _id: 13,
                _parent: Some(
                    11,
                ),
            },
        ),
        StringEnd(
            StringEnd {
                _range: Range {
                    start_byte: 19,
                    end_byte: 20,
                    start_point: Point {
                        row: 1,
                        column: 18,
                    },
                    end_point: Point {
                        row: 1,
                        column: 19,
                    },
                },
                _id: 14,
                _parent: Some(
                    11,
                ),
            },
        ),
    ],
}
