examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__concatenated_strings@"one" "two" "three".snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                ConcatenatedString(
                                    ConcatenatedString {
                                        children: [
                                            String {
                                                children: [
                                                    StringStart(
                                                        StringStart {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringContent(
                                                        StringContent {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringEnd(
                                                        StringEnd {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                            String {
                                                children: [
                                                    StringStart(
                                                        StringStart {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringContent(
                                                        StringContent {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringEnd(
                                                        StringEnd {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                            String {
                                                children: [
                                                    StringStart(
                                                        StringStart {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringContent(
                                                        StringContent {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringEnd(
                                                        StringEnd {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
