examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__dictionaries.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            Pair(
                                                Pair {
                                                    value: PrimaryExpression(
                                                        Integer(
                                                            Integer {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    key: PrimaryExpression(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            Pair(
                                                Pair {
                                                    value: PrimaryExpression(
                                                        Integer(
                                                            Integer {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    key: PrimaryExpression(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            DictionarySplat(
                                                DictionarySplat {
                                                    children: PrimaryExpression(
                                                        Dictionary(
                                                            Dictionary {
                                                                children: [],
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            DictionarySplat(
                                                DictionarySplat {
                                                    children: PrimaryExpression(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            DictionarySplat(
                                                DictionarySplat {
                                                    children: PrimaryExpression(
                                                        Attribute(
                                                            Attribute {
                                                                attribute: Identifier {
                                                                    [RANGE]
                                                                },
                                                                object: Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            DictionarySplat(
                                                DictionarySplat {
                                                    children: PrimaryExpression(
                                                        Attribute(
                                                            Attribute {
                                                                attribute: Identifier {
                                                                    [RANGE]
                                                                },
                                                                object: Subscript(
                                                                    Subscript {
                                                                        subscript: [
                                                                            Expression(
                                                                                PrimaryExpression(
                                                                                    Identifier(
                                                                                        Identifier {
                                                                                            [RANGE]
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ],
                                                                        value: Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            DictionarySplat(
                                                DictionarySplat {
                                                    children: PrimaryExpression(
                                                        Call(
                                                            Call {
                                                                function: Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                arguments: ArgumentList(
                                                                    ArgumentList {
                                                                        children: [],
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
