examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__dictionaries@{a: 1, b: 2}.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Dictionary(
                                    Dictionary {
                                        children: [
                                            Pair(
                                                Pair {
                                                    key: PrimaryExpression(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    value: PrimaryExpression(
                                                        Integer(
                                                            Integer {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            Pair(
                                                Pair {
                                                    key: PrimaryExpression(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    value: PrimaryExpression(
                                                        Integer(
                                                            Integer {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
